platform_versioned_docs/version-4.2.0/install/helm.mdx
---
title: Deploy using Helm
sidebar_label: Using Helm
sidebar_position: 2
description: Learn how to deploy and configure the platform using Helm
---

import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";
import LoginToPlatformAfterHelmInstall from "../_partials/install/login-after-helm-install.mdx";
import InstallNextSteps from "../_partials/install/install-next-steps.mdx";
import ListHelmVersions from "../_partials/install/list-helm-versions.mdx";

import BasePrerequisites from "../_partials/install/base-prerequisites.mdx";
import NetworkPorts from '../_partials/install/open-ports.mdx';

The platform can be deployed directly using Helm commands. Managing the platform deployment with Helm directly can be a great way to "GitOps" your platform
deployment, by using ArgoCD or other GitOps tools to manage the platform deployment. This section outlines the basics of deploying and managing the platform with
Helm, and can serve as a solid starting point for managing the platform
in a GitOps fashion as well.

## Prerequisites

<BasePrerequisites />

### Resource requirements

<NetworkPorts />

For more detailed information about networking requirements, see [Networking](/docs/platform/administer/clusters/advanced/networking).


## Deployment

The platform deployment via Helm is similar to any Helm chart deployment.

### Adding the repository

If you haven't done so, add the Loft Helm repository and update.

```bash title="Add Loft Helm repository"
helm repo add loft https://charts.loft.sh
helm repo update
```

### Deploying the platform

```bash title="Deploy the platform"
RELEASE_NAME=vcluster-platform
RELEASE_NAMESPACE=vcluster-platform
PLATFORM_VERSION='' # Set this to a specific version or leave empty to deploy the latest version

helm upgrade $RELEASE_NAME vcluster-platform \
  --install \
  --repo https://charts.loft.sh/ \
  --namespace $RELEASE_NAMESPACE \
  --create-namespace \
  ${PLATFORM_VERSION:+--version $PLATFORM_VERSION}
```

You should see output similar to the following:

```bash title="Output of the Helm deploy command"
Release "vcluster-platform" does not exist. Installing it now.
NAME: vcluster-platform
LAST DEPLOYED: Fri Oct  4 13:10:52 2024
# highlight-start
NAMESPACE: vcluster-platform
STATUS: deployed
# highlight-end
REVISION: 1
TEST SUITE: None
NOTES:
Thank you for installing vcluster-platform.
```

<ListHelmVersions />
## Configuration

### Customize values

As with most Helm charts, the vcluster-platform chart supports many
user-configurable values to modify the deployment of resources. You can find the
vcluster-platform chart in the Loft public repository
[here](https://github.com/loft-sh/loft/tree/master/chart). The `values.yaml`
file in the chart repository contains the default values, as well as many
comments showing optional values and additional information.

To customize your deployment, you can either:

1. Copy the default values file and modify it to suit your deployment needs, or
2. Create a new YAML file containing only the desired values settings.

### Configure platform options

Inside the `values.yaml` file, there is a `config` field, which contains the
configuration options for the platform. These options are available in the UI
under `Admin` > `Config` section and can be edited either through the
`values.yaml` or the UI. There is a detailed list of [available configuration
options](../configure/config) in the docs.

### Set recommended values

There are a set of fields in the `values.yaml` that are recommended to explicitly set:

- `config.loftHost` - Sets a publicly resolvable hostname.
- `admin.username` - Sets the username of an administrator user. By default, the username is `admin`.
- `admin.password` - Sets the password of an administrator user. By default, the username is `my-password`.

```yaml title="Recommended values.yaml and config section."
admin:
  username: my-own-username
  password: my-unique-password
config:
  audit:
    enabled: true
  loftHost: vcluster-platform.mytld.com

ingress:
  enabled: true
  host: vcluster-platform.mytld.com
```

### Apply custom configuration

Values files can be passed to the Helm upgrade command. Update `$PLATFORM_VERSION` with a valid platform version.

```bash title="Deploy with custom values.yaml."
RELEASE_NAME=vcluster-platform
RELEASE_NAMESPACE=vcluster-platform
PLATFORM_VERSION='' # Set this to a specific version or leave empty to deploy the latest version

helm upgrade $RELEASE_NAME vcluster-platform \
  --install \
  --repo https://charts.loft.sh/ \
  --namespace $RELEASE_NAMESPACE \
  --create-namespace \
  --values values.yaml \
  ${PLATFORM_VERSION:+--version $PLATFORM_VERSION}
```

You can provide multiple values files if desired by specifying additional
file names after the `--values` flag. This can be handy if you prefer to break up
the values sections into different files.

Helm has many additional flags and other ways to pass values. As always, it's a great idea to check out the Helm [docs](https://Helm.sh/docs/) to stay up to date on Helm.

## Login

<LoginToPlatformAfterHelmInstall />

Navigate to the domain in your browser and log in with the default credentials or
the credentials you set in `values.yaml` and complete the profile setup.

## Next steps

### Create virtual clusters

<InstallNextSteps />
